test/mpi/errors/cxx/errhan/Makefile.sm
INCLUDES = -I../../../include -I${srcdir}/../../../include
DEPADD = @MPILIBLOC@ ../../../cxx/util/mtest.o
smvar_do_sharedlibs = 0

errgetx_SOURCES   = errgetx.cxx
errgetx_LDADD     = ../../../cxx/util/mtest.o
errsetx_SOURCES   = errsetx.cxx
errsetx_LDADD     = ../../../cxx/util/mtest.o
commerrx_SOURCES  = commerrx.cxx
commerrx_LDADD    = ../../../cxx/util/mtest.o
throwtest_SOURCES = throwtest.cxx
throwtest_LDADD   = ../../../cxx/util/mtest.o

../../../cxx/util/mtest.o: 
	(cd ../../../cxx/util && $(MAKE) mtest.o)

# A special testing target to simplify running just the pt2pt tests
testing:
	../../../runtests -srcdir=$(srcdir) -tests=testlist \
		   -mpiexec=@MPIEXEC@ \
		   -xmlfile=summary.xml
clean-local:
	-rm -f summary.xml
